# MenkeTechnologiesMeta

./: .gitignore  .gitmodules  BUGS.md  COMPONENTS.md  GUI_APP_ARCHITECTURE.md  GUI_APP_REQUIREMENTS.md  GUI_AUTOMATION_BUS.md  GUI_AUTOMATION_BUS_CHECKLIST.md  GUI_FEATURE_MATRIX.md  GUI_POLISH_GATE.md  GUI_POLISH_GATE_CHECKLIST.md  GUI_SCRIPT_ACTIONS.md  GUI_ZGUI_PORT_AUDIT.md  INVENTIONS.md  LICENSE  README.md  SYNTH_PARITY.md
docs/: BUGS.md  COMPONENTS.md  GUI_APP_ARCHITECTURE.md  GUI_APP_REQUIREMENTS.md  GUI_AUTOMATION_BUS.md  GUI_AUTOMATION_BUS_CHECKLIST.md  GUI_FEATURE_MATRIX.md  GUI_POLISH_GATE.md  GUI_POLISH_GATE_CHECKLIST.md  GUI_SCRIPT_ACTIONS.md  GUI_ZGUI_PORT_AUDIT.md  INVENTIONS.md  gui-feature-matrix.html  gui-widget-audit.html  index.html  inventions.html  inventory.html  port-reports.html  product.css  report.html  store.js
scripts/: bp.sh  bp.stk  collect-pdfs.sh
tests/: bin-scripts.sh  cargo-authors-field.sh  cargo-authors-unique.sh  cargo-bench-canonical-keys.sh  cargo-bin-canonical-keys.sh  cargo-bin-name-field.sh  cargo-bin-path-exists.sh  cargo-bin-required-features-valid.sh  cargo-categories-format.sh  cargo-categories-unique.sh  cargo-default-run-valid.sh  cargo-dep-canonical-keys.sh  cargo-dep-features-clean.sh  cargo-deps-have-version.sh  cargo-deps-no-exact-pin.sh  cargo-description-capitalized.sh  cargo-description-length.sh  cargo-description-min-length.sh  cargo-description-no-double-space.sh  (+228 more)
zdbview/: Cargo.toml  README.md
zdbview/src/: app.rs  main.rs  mru.rs  rkyv_inspect.rs  sqlite.rs  store.rs
zdbview/tests/: backend.rs
(+373 files in other folders)
