[package]
name = "zdbview"
version = "0.1.0"
edition = "2021"
description = "Terminal inspector and CRUD editor for rkyv archives and SQLite databases"
license = "MIT"

[[bin]]
name = "zdbview"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
rusqlite = { version = "0.40", features = ["bundled"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
